--- a/demo/package.json
+++ b/demo/package.json
@@ -1,12 +1,15 @@
 {
   "name": "demo",
-  "module": "index.js",
+  "module": "server.js",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
+  },
+  "scripts": {
+    "dev": "bun --hot server.js"
   },
   "type": "module"
 }
