--- a/demo/package.json
+++ b/demo/package.json
@@ -2,8 +2,13 @@
   "name": "demo",
   "module": "server.js",
   "dependencies": {
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "graphql-http": "^1.22.0",
+    "graphql-tools": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redis": "^4.6.13"
   },
   "devDependencies": {
     "@types/bun": "latest"
