--- a/demo/package.json
+++ b/demo/package.json
@@ -6,6 +6,7 @@
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
     "graphql-tools": "^9.0.0",
+    "mongoose": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.13"
