--- a/demo/package.json
+++ b/demo/package.json
@@ -3,6 +3,7 @@
   "module": "server.js",
   "dependencies": {
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
     "graphql-tools": "^9.0.0",
