Added Bun support for css (lightningcss)

--- a/demo/package.json
+++ b/demo/package.json
@@ -13,7 +13,8 @@
     "redis": "^4.6.13"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "bun-lightningcss": "^0.2.0"
   },
   "scripts": {
     "dev": "bun --hot server.js"
