--- a/vite-demo/package.json
+++ b/vite-demo/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.1.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-json-pretty": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
