completed backend routing

--- a/vite-demo/package.json
+++ b/vite-demo/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite & bun --hot run ./server/index.js",
+    "backend": "bun --hot run ./server/index.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
