--- a/vite-demo/package.json
+++ b/vite-demo/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
+    "graphql-depth-limit": "1.1.0",
     "graphql-http": "^1.22.0",
     "ioredis": "^5.3.2",
     "mongoose": "^8.1.1",
