--- a/vite-demo/package.json
+++ b/vite-demo/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
