--- a/vite-demo/package.json
+++ b/vite-demo/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.8.1",
     "graphql-depth-limit": "1.1.0",
     "graphql-http": "^1.22.0",
+    "graphql-validation-complexity": "^0.4.2",
     "ioredis": "^5.3.2",
     "mongoose": "^8.1.1",
     "path": "^0.12.7",
