--- a/vite-demo/package.json
+++ b/vite-demo/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-json-pretty": "^2.2.0",
+    "react-router-dom": "^6.22.1",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
