--- a/demo/package.json
+++ b/demo/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@buql/buql": "^0.1.4",
     "@faker-js/faker": "^8.4.1",
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
