trying to fix errors

--- a/demo/package.json
+++ b/demo/package.json
@@ -39,5 +39,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^5.1.0"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
