--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-json-pretty": "^2.2.0",
     "react-router-dom": "^6.22.1",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
